--- a/deploy/noenv.yaml
+++ b/deploy/noenv.yaml
@@ -21,4 +21,12 @@ spec:
           imagePullPolicy: IfNotPresent
           command: ["/bin/sh"]
           args: ["-c", "printenv; sleep 6000"]
-
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: my-secret
+type: Opaque
+data:
+  username: YWJj # abc
+  password: MTIz # 123
